--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -481,6 +481,8 @@
         "CHECK-HEALTH-FAIL-OCR": "系統自我檢查失敗：OCR",
         "CHECK-HEALTH-FAIL-FP": "系統自我檢查失敗：Fingerprint",
         "CHECK-HEALTH-FAIL-SP": "系統自我檢查失敗：Slipprinter",
-        "UPDATE_CSOS": "更新身份證晶片內的逗留條件及逗留期限"
+        "UPDATE_CSOS": "更新身份證晶片內的逗留條件及逗留期限",
+        "PRINTER_NO_PAPER": "打印機缺紙，請與職員聯絡。",
+        "PRINTER_NOT_AVAILABLE": "打印機出錯了，請與職員聯絡。"
     }
 }
