--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -480,6 +480,8 @@
         "CHECK-HEALTH-FAIL-OCR": "System self-test fail: OCR",
         "CHECK-HEALTH-FAIL-FP": "System self-test fail: Fingerprint",
         "CHECK-HEALTH-FAIL-SP": "System self-test fail: Slipprinter",
-        "UPDATE_CSOS": "Update Condition of Stay and Limit of Stay in chip of identity card"
+        "UPDATE_CSOS": "Update Condition of Stay and Limit of Stay in chip of identity card",
+        "PRINTER_NO_PAPER": "The printer is out of paper,Please approach our staff for assistance.",
+        "PRINTER_NOT_AVAILABLE": "The printer is not available,Please approach our staff for assistance."
     }
 }
