--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -481,7 +481,7 @@
         "CHECK-HEALTH-FAIL-FP": "System self-test fail: Fingerprint",
         "CHECK-HEALTH-FAIL-SP": "System self-test fail: Slipprinter",
         "UPDATE_CSOS": "Update Condition of Stay and Limit of Stay in chip of identity card",
-        "PRINTER_NO_PAPER": "The printer is out of paper,Please approach our staff for assistance.",
-        "PRINTER_NOT_AVAILABLE": "The printer is not available,Please approach our staff for assistance."
+        "PRINTER_NO_PAPER": "The printer is out of paper, please approach our staff for assistance.",
+        "PRINTER_NOT_AVAILABLE": "The printer is not available, please approach our staff for assistance."
     }
 }
